<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zozick Team</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Главная</string>
    <string name="menu_inf">О нас</string>
    <string name="menu_indicator">Физ. показатели</string>
    <string name="menu_profile">Личный кабинет</string>
    <string name="telefon">Телефон</string>
    <string name="name">Имя</string>
    <string name="ves">Вес</string>
    <string name="email">Email</string>
    <string name="rost">Рост</string>
    <string name="pol">Пол</string>
    <string name="age">Возраст</string>
    <string name="todo">TODO</string>
    <string name="disease">Мои заболевания</string>
</resources>
