<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/image5"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ind"
            android:icon="@drawable/image6"
            android:title="@string/menu_indicator" />
        <item
            android:id="@+id/nav_inf"
            android:icon="@drawable/image7"
            android:title="@string/menu_inf" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/image13"
            android:title="@string/menu_profile" />
    </group></menu>