<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/telefon"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="316dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/telefon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/email"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor,VisualLintOverlap" />

    <EditText
        android:id="@+id/ves"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="372dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rost"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="208dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rost"
        app:layout_constraintVertical_bias="0.092"
        tools:ignore="LabelFor,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rost"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/rost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pol"
        app:layout_constraintVertical_bias="0.145"
        android:autofillHints=""
        tools:ignore="LabelFor,VisualLintOverlap" />

    <EditText
        android:id="@+id/pol"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="#009E9696"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.09"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/age"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="404dp"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.111"
        android:autofillHints=""
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009E9696"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disease"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="150dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ava"
        app:layout_constraintBottom_toTopOf="@+id/ves"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>